--- a/descriptions/dungetic.html
+++ b/descriptions/dungetic.html
@@ -1,4 +1,4 @@
-    <p>Dungetic - is a rogue-like game made with Pygame.
+    <article>Dungetic - is a rogue-like game made with Pygame.
 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 Curabitur suscipit risus non purus malesuada, et vehicula nunc ultrices. Donec mollis purus vel ante vestibulum pulvinar. Nam id velit hendrerit, dictum nisl in, scelerisque mauris. Cras dictum augue id semper egestas. Donec sit amet orci quis massa consequat tempus a quis dui. Quisque ornare, libero vitae tristique dapibus, libero diam volutpat nulla, eget gravida ipsum justo sed tortor. Praesent purus mi, ullamcorper vitae cursus id, ullamcorper ultrices neque.
 
@@ -10,5 +10,5 @@ Praesent commodo purus eget convallis auctor.
 Fusce varius pharetra elit in hendrerit. Nunc sodales consectetur justo, quis semper nulla sollicitudin in. Proin vitae dolor orci. Nulla tristique pharetra dolor eu tincidunt. Phasellus nec augue elit. Duis iaculis, sapien eleifend rhoncus facilisis, tortor justo lobortis ipsum, eu pellentesque massa metus vel risus. Donec dui dolor, varius nec enim ut, porttitor convallis erat.
 
 Vivamus velit velit, venenatis at enim finibus, molestie auctor turpis. Integer hendrerit ipsum sit amet nibh auctor auctor. Cras a sapien tristique, pharetra turpis eu, feugiat turpis. Donec bibendum a massa ac hendrerit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean semper est non purus imperdiet aliquam. Nam pellentesque egestas ligula sit amet iaculis. Sed vel semper velit. Sed placerat, tortor vitae volutpat venenatis, orci orci dictum sapien, a tincidunt dui leo a nulla. Quisque elit nibh, aliquam eget est eget, suscipit dictum neque. Fusce ac lectus vel dui maximus dapibus. Mauris efficitur lectus eget leo malesuada, ut pellentesque leo placerat. Suspendisse dapibus tempus dolor, vel commodo augue pulvinar id. Morbi a dapibus augue. Etiam in turpis id urna congue sodales. Etiam elit justo, cursus sed odio in, cursus imperdiet orci.
-    </p>
+    </article>
 
